--- a/Toys2/app/src/main/res/layout/activity_main.xml
+++ b/Toys2/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="92dp"
-        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.574"
